--- a/package.json
+++ b/package.json
@@ -1,32 +1,21 @@
 {
-  "name": "@dsmith36/argocd-ui-ext",
+  "name": "@chezmoi-sh/argocd-ui-extension-application-map",
   "version": "0.1.1",
   "private": false,
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
-    "@react-sigma/core": "^5.0.2",
-    "@tippy.js/react": "^3.1.1",
-    "@types/recharts": "^1.8.23",
     "@xyflow/react": "^12.6.0",
-    "css-loader": "^7.1.2",
-    "elkjs": "^0.10.0",
     "graphology": "^0.26.0",
-    "graphology-types": "^0.24.8",
-    "reaflow": "^5.4.1",
-    "recharts": "^2.1.9",
-    "resize-observer-polyfill": "^1.5.1",
-    "sigma": "^3.0.1",
-    "web-vitals": "^1.0.1"
+    "graphology-types": "^0.24.8"
   },
   "peerDependencies": {
-    "argo-ui": "git+https://github.com/argoproj/argo-ui.git",
-    "moment": "^2.29.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "start": "webpack --config ./webpack.config.js --watch",
-    "build": "webpack --config ./webpack.config.js && tar -C dist -cvf extension.tar resources"
+    "build": "webpack --config ./webpack.config.js && tar -C dist -cvf dist/extension.tar resources"
   },
   "eslintConfig": {
     "extends": [
@@ -46,25 +35,17 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/styled-components": "^5.1.25",
-    "argo-ui": "git+https://github.com/argoproj/argo-ui.git",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
-    "portable-fetch": "^3.0.0",
-    "raw-loader": "0.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-keyhooks": "^0.2.3",
-    "rxjs": "^7.1.0",
-    "sass": "1.34.1",
-    "sass-loader": "10.2.1",
-    "style-loader": "1.3.0",
-    "ts-loader": "8.2.0",
-    "typescript": "^4.3.5",
+    "raw-loader": "^0.5.1",
+    "sass": "^1.34.1",
+    "sass-loader": "^10.2.1",
+    "style-loader": "^1.3.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^4.7.2"
