:wrench:: Improve build configuration and development workflow
- Add development and production build modes in webpack
- Update MISE configuration with latest tool versions
- Enhance npm scripts for better development experience
- Add source maps for development debugging
- Optimize production builds with console removal

Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/.mise.toml
+++ b/.mise.toml
@@ -4,7 +4,8 @@ helm = "3.17"
 kind = "0.20"
 kubectl = "1.32"
 node = "lts"
-tilt = "0.34"
+pnpm = "latest"
+tilt = "latest"
 
 # -- Configure MISE environment
 [env]
