--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "start": "webpack --config ./webpack.config.js --watch",
-    "build": "webpack --config ./webpack.config.js && tar -C dist -cvf dist/extension.tar resources"
+    "webpack": "webpack --config ./webpack.config.js",
+    "webpack:watch": "webpack --config ./webpack.config.js --watch",
+    "dev": "NODE_ENV=development pnpm webpack:watch",
+    "build:dev": "NODE_ENV=development pnpm webpack",
+    "build:prod": "NODE_ENV=production pnpm webpack",
+    "build:enpack": "tar -C dist -cvf dist/extension.tar resources",
+    "build": "pnpm build:prod && pnpm build:enpack",
+    "start": "pnpm dev"
   },
   "eslintConfig": {
     "extends": [
