--- a/examples/applications-maze/app-of-apps-02/appset-03.yaml
+++ b/examples/applications-maze/app-of-apps-02/appset-03.yaml
@@ -7,23 +7,24 @@ spec:
   generators:
     - list:
         elements:
-          - name: app-of-apps-01
-            path: examples/applications-maze/app-of-apps-01
-          - name: app-of-apps-02
-            path: examples/applications-maze/app-of-apps-02
+          - name: guestbook-app-04
+            path: examples/applications-maze/argocd-example-apps/guestbook
+            namespace: guestbook-app-04
   template:
     metadata:
-      name: '{{name}}'
+      name: "{{name}}"
     spec:
       project: default
       source:
         repoURL: https://github.com/chezmoi-sh/argocd-extension-application-map.git
         targetRevision: main
-        path: '{{path}}'
+        path: "{{path}}"
       destination:
         server: https://kubernetes.default.svc
-        namespace: argocd
+        namespace: "{{namespace}}"
       syncPolicy:
         automated:
           prune: true
           selfHeal: true
+        syncOptions:
+          - CreateNamespace=true
