--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "build:prod": "NODE_ENV=production pnpm webpack",
     "build:enpack": "tar -C dist -cvf dist/extension.tar resources",
     "build": "pnpm build:prod && pnpm build:enpack",
-    "start": "pnpm dev"
+    "start": "pnpm dev",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "eslintConfig": {
     "extends": [
@@ -41,15 +43,19 @@
     ]
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
+    "jest": "^29.7.0",
     "raw-loader": "^0.5.1",
     "sass": "^1.34.1",
     "sass-loader": "^10.2.1",
     "style-loader": "^1.3.0",
+    "ts-jest": "^29.3.2",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.75.0",
