--- a/examples/applications-maze/app-of-apps-01/appset-01.yaml
+++ b/examples/applications-maze/app-of-apps-01/appset-01.yaml
@@ -18,16 +18,16 @@ spec:
             namespace: argocd
   template:
     metadata:
-      name: '{{name}}'
+      name: "{{name}}"
     spec:
       project: default
       source:
         repoURL: https://github.com/chezmoi-sh/argocd-extension-application-map.git
         targetRevision: main
-        path: '{{path}}'
+        path: "{{path}}"
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{namespace}}'
+        namespace: "{{namespace}}"
       syncPolicy:
         automated:
           prune: true
