--- a/examples/applications-maze/app-of-apps-01/appset-02.yaml
+++ b/examples/applications-maze/app-of-apps-01/appset-02.yaml
@@ -12,16 +12,16 @@ spec:
           - path: examples/applications-maze/argocd-example-apps/*
   template:
     metadata:
-      name: '{{path.basename}}'
+      name: "{{path.basename}}"
     spec:
       project: default
       source:
         repoURL: https://github.com/chezmoi-sh/argocd-extension-application-map.git
         targetRevision: main
-        path: '{{path}}'
+        path: "{{path}}"
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{path.basename}}'
+        namespace: "{{path.basename}}"
       syncPolicy:
         automated:
           prune: true
