--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -17,10 +17,11 @@ runtimes:
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   enabled:
+    - actionlint@1.7.7
     - osv-scanner@2.0.2
     - oxipng@9.1.5
     - yamllint@1.37.1
-    - checkov@3.2.417
+    - checkov@3.2.420
     - git-diff-check
     - markdownlint@0.44.0
     - prettier@3.5.3
