--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chezmoi-sh/argocd-extension-application-map",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "private": false,
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
@@ -23,6 +23,7 @@
     "build": "pnpm build:prod && pnpm build:enpack",
     "start": "pnpm dev",
     "test": "jest",
+    "test:ci": "jest --reporters=default --reporters=jest-junit --ci --coverage --testResultsProcessor=jest-junit",
     "test:watch": "jest --watch"
   },
   "eslintConfig": {
@@ -51,6 +52,7 @@
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "raw-loader": "^0.5.1",
     "sass": "^1.34.1",
     "sass-loader": "^10.2.1",
