:green_heart:: Improve CI workflow triggers and test command
- Add self-reference to workflow paths triggers to ensure workflows are triggered when modified\n- Update test command to use CI-specific test script

Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/.github/workflows/merge_group,pull_request.all.tests.yaml
+++ b/.github/workflows/merge_group,pull_request.all.tests.yaml
@@ -5,6 +5,7 @@ on:
   merge_group: {}
   pull_request:
     paths:
+      - .github/workflows/merge_group,pull_request.all.tests.yaml
       - src/
       - package.json
       - pnpm-lock.yaml
@@ -38,7 +39,7 @@ jobs:
         run: pnpm install
 
       - name: 🧪 Run tests
-        run: pnpm test
+        run: pnpm test:ci
 
       - name: 📊 Upload test results
         uses: dorny/test-reporter@6e6a65b7a0bd2c9197df7d0ae36ac5cee784230c # v2.0.0
