--- a/.github/workflows/push,pull_request.build.yaml
+++ b/.github/workflows/push,pull_request.build.yaml
@@ -5,11 +5,13 @@ on:
   push:
     branches: [main]
     paths:
+      - .github/workflows/push,pull_request.build.yaml
       - src/
       - package.json
       - pnpm-lock.yaml
   pull_request:
     paths:
+      - .github/workflows/push,pull_request.build.yaml
       - src/
       - package.json
       - pnpm-lock.yaml
