:bug:: Fix build scripts and update checksum file names
- Updated `package.json` to change the output tar file name for the `build:enpack` script from `extension.tar` to `extension-application-map.tar`.
- Modified the GitHub Actions workflow to reflect the new tar file name in the checksum creation step and on release artifacts

Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/.github/workflows/push.release.yaml
+++ b/.github/workflows/push.release.yaml
@@ -88,14 +88,14 @@ jobs:
 
       - name: 📄 Create checksums
         run: |
-          SHA256_FILE="extension_checksums.txt"
-          sha256sum ./dist/extension.tar > "${SHA256_FILE}"
+          SHA256_FILE="extension-application-map_checksums.txt"
+          sha256sum ./dist/extension-application-map.tar > "${SHA256_FILE}"
           echo "Created checksum file: ${SHA256_FILE}"
           cat "${SHA256_FILE}"
 
       - name: 🚀 Create GitHub Release
         run: |
           VERSION="v${{ needs.check-version.outputs.version }}"
-          gh release create "${VERSION}" --draft --generate-notes ./dist/extension.tar ./extension_checksums.txt
+          gh release create "${VERSION}" --draft --generate-notes ./dist/extension-application-map.tar ./extension-application-map_checksums.txt
         env:
           GH_TOKEN: ${{ github.token }}
