--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": false,
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
-    "@xyflow/react": "^12.6.0",
+    "@xyflow/react": "^12.6.4",
     "graphology": "^0.26.0",
     "graphology-types": "^0.24.8"
   },
   "peerDependencies": {
-    "react": "^18.2.0 || ^19.0.0",
-    "react-dom": "^18.2.0 || ^19.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
@@ -24,11 +24,14 @@
     "start": "pnpm dev",
     "test": "jest",
     "test:ci": "jest --reporters=default --reporters=jest-junit --ci --coverage --testResultsProcessor=jest-junit",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "storybook": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -44,24 +47,43 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@jest/globals": "^29.7.0",
+    "@storybook/addon-actions": "^8.6.14",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-webpack5": "^8.6.14",
+    "@storybook/test": "^8.6.14",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
+    "babel-jest": "^29.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
+    "eslint-plugin-storybook": "^0.12.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "raw-loader": "^4.0.0",
-    "sass": "^1.34.1",
-    "sass-loader": "^16.0.0",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.89.0",
+    "sass-loader": "^16.0.5",
+    "storybook": "^8.6.14",
     "style-loader": "^4.0.0",
-    "ts-jest": "^29.3.2",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.3.3",
-    "webpack": "^5.75.0",
+    "task-master-ai": "^0.13.2",
+    "ts-jest": "^29.3.4",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
+    "webpack": "^5.99.8",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^6.0.0"
+    "webpack-cli": "^6.0.1"
   }
 }
