--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
     "react-dom": "^18.0.0"
   },
   "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "webpack": "webpack --config ./webpack.config.js",
-    "webpack:watch": "webpack --config ./webpack.config.js --watch",
-    "dev": "NODE_ENV=development pnpm webpack:watch",
+    "build-storybook": "storybook build",
     "build:dev": "NODE_ENV=development pnpm webpack",
-    "build:prod": "NODE_ENV=production pnpm webpack",
     "build:enpack": "tar -C dist -cvf dist/extension-application-map.tar resources",
+    "build:prod": "NODE_ENV=production pnpm webpack",
     "build": "pnpm build:prod && pnpm build:enpack",
+    "dev": "NODE_ENV=development pnpm webpack:watch",
+    "preinstall": "npx only-allow pnpm",
     "start": "pnpm dev",
-    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
     "test:ci": "jest --reporters=default --reporters=jest-junit --ci --coverage --testResultsProcessor=jest-junit",
     "test:watch": "jest --watch",
-    "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build"
+    "test": "jest",
+    "webpack:watch": "webpack --config ./webpack.config.js --watch",
+    "webpack": "webpack --config ./webpack.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +51,7 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@chromatic-com/storybook": "^3.2.6",
     "@jest/globals": "^29.7.0",
     "@storybook/addon-actions": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
@@ -59,6 +61,7 @@
     "@storybook/react": "^8.6.14",
     "@storybook/react-webpack5": "^8.6.14",
     "@storybook/test": "^8.6.14",
+    "@storybook/test-runner": "^0.22.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.14",
@@ -66,6 +69,7 @@
     "@types/react-dom": "^18.3.7",
     "babel-jest": "^29.7.0",
     "babel-preset-react": "^6.24.1",
+    "chromatic": "^11.28.2",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
     "eslint-plugin-storybook": "^0.12.0",
@@ -73,6 +77,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "playwright": "^1.52.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
