--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
     "storybook": "^8.6.14",
+    "storybook-addon-deep-controls": "^0.9.2",
     "style-loader": "^4.0.0",
     "task-master-ai": "^0.13.2",
     "ts-jest": "^29.3.4",
