:memo:: Add Getting Started documentation for Storybook integration
- Enhance the "Why Use Storybook for an ArgoCD Extension?" section to clarify benefits of using Storybook for isolated UI component development and CI integration.
- Add a "Table of Contents" for easier navigation through components.
- Include a "To Go Further" section with links to project README and component exploration tips.

Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -25,20 +25,21 @@ lint:
     - osv-scanner@2.0.2
     - oxipng@9.1.5
     - yamllint@1.37.1
-    - checkov@3.2.427
+    - checkov@3.2.432
     - git-diff-check
     - markdownlint@0.45.0
     - prettier@3.5.3:
         packages:
           - '@trivago/prettier-plugin-sort-imports@5.2.2'
     - taplo@0.9.3
-    - trufflehog@3.88.31
+    - trufflehog@3.88.33
   ignore:
     - linters: [ALL]
       paths:
         - 'examples/**/*.yaml'
-        - 'examples/**/*.yml'
-        - 'examples/**/*.yaml.j2'
+    - linters: [markdownlint]
+      paths:
+        - 'src/**/*.mdx'
 actions:
   disabled:
     - trunk-announce
