:art:: Sort import statements in story files for consistency
Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/.trunk/configs/.prettierrc.yaml
+++ b/.trunk/configs/.prettierrc.yaml
@@ -20,4 +20,5 @@ importOrder:
   - '^@xyflow/(.*)$'
   - '^[./]'
 importOrderGroupNamespaceSpecifiers: true
+importOrderSeparation: true
 importOrderSortSpecifiers: true
