:wrench:: Group all Storybook dependencies together
- Add packageRules group in renovate.json for all Storybook-related
dependencies:
  - @storybook/*
  - storybook
  - storybook-addon-*
  - chromatic
  - @chromatic-com/storybook

Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -26,6 +26,16 @@
     {
       "groupName": "jest",
       "matchPackageNames": ["/^jest/", "/^@jest//", "/^@types/jest/"]
+    },
+    {
+      "groupName": "storybook",
+      "matchPackageNames": [
+        "/^@storybook\\//",
+        "/^storybook$/",
+        "/^storybook-addon-/",
+        "/^chromatic$/",
+        "/^@chromatic-com\\/storybook$/"
+      ]
     }
   ]
 }
