:art:: Run `trunk fmt` on all files
Signed-off-by: Alexandre Nicolaie <xunleii@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -8,12 +8,7 @@
   "packageRules": [
     {
       "groupName": "react",
-      "matchPackageNames": [
-        "/^react$/",
-        "/^react-dom$/",
-        "/^@types/react$/",
-        "/^@types/react-dom$/"
-      ]
+      "matchPackageNames": ["/^react$/", "/^react-dom$/", "/^@types/react$/", "/^@types/react-dom$/"]
     },
     {
       "groupName": "graphology",
