--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@dagrejs/dagre": "^1.1.4",
     "@xyflow/react": "^12.6.4",
     "graphology": "^0.26.0",
-    "graphology-types": "^0.24.8"
+    "graphology-types": "^0.24.8",
+    "pretty-ms": "^9.2.0"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -72,7 +73,7 @@
     "chromatic": "^13.0.0",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
-    "eslint-plugin-storybook": "^9.0.0",
+    "eslint-plugin-storybook": "^0.12.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.0",
     "jest-environment-jsdom": "^30.0.0",
